tests/errors/var_exist_54/e2.src
.IPPcode21

CREATEFRAME
DEFVAR GF@a
DEFVAR GF@b
DEFVAR GF@C

ADD GF@d int@1 int@2
